<resources>
    <string name="app_name">Reminder</string>
    <string name="reminder_details">Reminder details</string>
    <string name="description">description</string>
    <string name="title">title</string>
    <string name="select_a_date">Select a date:</string>
    <string name="select_a_time">Select a time:</string>
    <string name="cancel">cancel</string>
    <string name="set_reminder">set reminder</string>
    <string name="edit_reminder">edit reminder</string>
</resources>