<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/gray"
    android:elevation="24dp"
    app:cardCornerRadius="32dp">

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="match_parent"
        android:paddingVertical="32dp"
        android:paddingHorizontal="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/almost_white"
            android:textSize="28sp"
            android:text="Reminder details"
            tools:ignore="HardcodedText" />
        <EditText
            android:id="@+id/et_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/almost_white"
            android:textSize="20sp"
            android:paddingStart="8dp"
            android:hint="@string/title"
            android:maxLength="50"
            android:textColorHint="@color/even_lighter_gray"/>
        <EditText
            android:id="@+id/et_dialog_desc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/almost_white"
            android:gravity="bottom"
            android:textSize="20sp"
            android:paddingStart="8dp"
            android:hint="@string/description"
            android:textColorHint="@color/even_lighter_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="@color/almost_white"
                android:text="@string/select_a_date"/>
            <ImageButton
                android:id="@+id/ib_dialog_calendar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="0dp"
                android:layout_marginEnd="16dp"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/gray"
                android:src="@drawable/calendar"/>
            <TextView
                android:id="@+id/tv_dialog_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="sans-serif-light"
                android:paddingHorizontal="16dp"
                android:paddingBottom="10dp"
                android:paddingTop="8dp"
                android:textSize="14sp"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="@color/almost_white"
                android:text="@string/select_a_time"/>
            <ImageButton
                android:id="@+id/ib_dialog_clock"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="0dp"
                android:layout_marginEnd="20dp"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/gray"
                android:src="@drawable/clock"/>
            <TextView
                android:id="@+id/tv_dialog_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-light"
                android:paddingHorizontal="16dp"
                android:paddingBottom="12dp"
                android:paddingTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/almost_white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:backgroundTint="@color/light_gray"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="24dp"
                android:paddingTop="6dp"
                android:paddingBottom="8dp"
                android:textSize="18sp"
                android:textColor="@color/almost_white"
                android:text="@string/cancel"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_set_reminder"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:backgroundTint="@color/even_lighter_gray"
                android:layout_marginStart="64dp"
                android:paddingHorizontal="24dp"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:text="@string/set_reminder"
                android:textSize="18sp"
                android:textColor="@color/almost_black" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>